--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,49 +14,42 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
             integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
             crossorigin="anonymous"></script>
-    <title>Автомобильные инциденты</title>
+    <title>Автомобильные нарушения</title>
 </head>
 <body>
 <div class="container">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Accidents</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">
-                        <span th:text="${user}"></span>
-                    </a>
-                </li>
-            </ul>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-item nav-link active" href="#">Главная</a>
+                <a class="nav-item nav-link" th:href="@{/accidents}">Нарушения</a>
+                <a class="nav-item nav-link" th:href="@{/createAccident}">Добавить нарушение</a>
+            </div>
         </div>
     </nav>
     <div class="row">
-        <table class="table">
-            <thead>
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">Правонарушение</th>
-                <th scope="col">Описание</th>
-                <th scope="col">Адрес</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="accidents: ${accidents}">
-                <td th:text="${accidents.id}"></td>
-                <td th:text="${accidents.name}"></td>
-                <td th:text="${accidents.text}"></td>
-                <td th:text="${accidents.address}"></td>
-            </tr>
-            </tbody>
-        </table>
-    </div>
+    <table class="table">
+        <thead>
+        <tr>
+            <th scope="col">#</th>
+            <th scope="col">Нарушение</th>
+            <th scope="col">Описание</th>
+            <th scope="col">Адрес</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="accident: ${accidents}">
+            <td th:text="${accident.id}"></td>
+            <td><a th:href="@{|/formEditAccident/${accident.id}|}">
+                <i class="fa fa-edit"></i>
+                <span th:text="${accident.name}"></span>
+            </a></td>
+            <td th:text="${accident.text}"></td>
+            <td th:text="${accident.address}"></td>
+        </tr>
+        </tbody>
+    </table>
+</div>
 </div>
 </body>
 </html>
