--- a/src/main/resources/templates/editAccident.html
+++ b/src/main/resources/templates/editAccident.html
@@ -37,6 +37,14 @@
           <input type="text" class="form-control" name="name" id="name" th:value="${accident.name}">
         </div>
         <div class="form-group">
+          <label for="type.id">Тип</label>
+          <select class="form-control" id="type.id"  name="type.id" th:field="*{accident.type.id}">
+            <option th:each="type: ${types}"
+                    th:text="${type.name}"
+                    th:value="${type.id}"></option>
+          </select>
+        </div>
+        <div class="form-group">
           <label for="text">Описание нарушения</label>
           <input type="text" class="form-control" name="text" id="text" th:value="${accident.text}">
         </div>
