--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -33,6 +33,7 @@
         <tr>
             <th scope="col">#</th>
             <th scope="col">Нарушение</th>
+            <th scope="col">Тип нарушения</th>
             <th scope="col">Описание</th>
             <th scope="col">Адрес</th>
         </tr>
@@ -44,6 +45,7 @@
                 <i class="fa fa-edit"></i>
                 <span th:text="${accident.name}"></span>
             </a></td>
+            <td th:text="${accident.type.name}"></td>
             <td th:text="${accident.text}"></td>
             <td th:text="${accident.address}"></td>
         </tr>
