5. Form с агрегационными объектами [#305523]

--- a/src/main/resources/templates/editAccident.html
+++ b/src/main/resources/templates/editAccident.html
@@ -45,6 +45,19 @@
           </select>
         </div>
         <div class="form-group">
+          <label for="type.id" name="rIds">Статья</label>
+          <select th:field="*{rules}"
+                  class="form-control"
+                  id="rIds" name="rIds" multiple>
+            <option value="0"></option>
+            <option th:each="rule: ${rules}"
+                    th:text="${rule.name}"
+                    th:value="${rule.id}"
+                    th:required="true">
+            </option>
+          </select>
+        </div>
+        <div class="form-group">
           <label for="text">Описание нарушения</label>
           <input type="text" class="form-control" name="text" id="text" th:value="${accident.text}">
         </div>
