--- a/src/main/resources/templates/createAccident.html
+++ b/src/main/resources/templates/createAccident.html
@@ -45,6 +45,14 @@
             </select>
           </div>
           <div class="form-group">
+            <label for="type.id" name="rIds">Статья</label>
+            <select class="form-control" id="rIds" name="rIds" multiple>
+              <option th:each="rule: ${rules}"
+                      th:text="${rule.name}"
+                      th:value="${rule.id}"></option>
+            </select>
+          </div>
+          <div class="form-group">
             <label for="text">Описание нарушения</label>
             <input type="text" class="form-control" name="text" id="text">
           </div>
