--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -34,6 +34,7 @@
             <th scope="col">#</th>
             <th scope="col">Нарушение</th>
             <th scope="col">Тип нарушения</th>
+            <th scope="col">Статья</th>
             <th scope="col">Описание</th>
             <th scope="col">Адрес</th>
         </tr>
@@ -46,6 +47,10 @@
                 <span th:text="${accident.name}"></span>
             </a></td>
             <td th:text="${accident.type.name}"></td>
+            <td>
+                <div th:each="rule: ${accident.rules}"
+                     th:text="${rule.name}"></div>
+            </td>
             <td th:text="${accident.text}"></td>
             <td th:text="${accident.address}"></td>
         </tr>
