--- a/src/main/resources/templates/createAccident.html
+++ b/src/main/resources/templates/createAccident.html
@@ -56,8 +56,8 @@
                         </select>
                     </div>
                     <div class="form-group">
-                        <label for="text">Описание нарушения</label>
-                        <input type="text" class="form-control" name="text" id="text">
+                        <label for="description">Описание нарушения</label>
+                        <input type="text" class="form-control" name="description" id="description">
                     </div>
                     <div class="form-group">
                         <label for="address">Адрес нарушения</label>
