--- a/src/main/resources/templates/editAccident.html
+++ b/src/main/resources/templates/editAccident.html
@@ -52,12 +52,15 @@
                         <select class="form-control" id="rIds" name="rIds" multiple>
                             <option th:each="rule: ${rules}"
                                     th:text="${rule.name}"
-                                    th:value="${rule.id}"></option>
+                                    th:value="${rule.id}"
+                                    th:selected="${selectedRule.contains(rule)}">
+                            </option>
                         </select>
                     </div>
                     <div class="form-group">
-                        <label for="text">Описание нарушения</label>
-                        <input type="text" class="form-control" name="text" id="text" th:value="${accident.text}">
+                        <label for="description">Описание нарушения</label>
+                        <input type="text" class="form-control" name="description" id="description"
+                               th:value="${accident.description}">
                     </div>
                     <div class="form-group">
                         <label for="address">Адрес нарушения</label>
