--- a/src/main/resources/templates/editAccident.html
+++ b/src/main/resources/templates/editAccident.html
@@ -23,7 +23,7 @@
             <div class="navbar-nav">
                 <a class="nav-item nav-link" href="#">Главная</a>
                 <a class="nav-item nav-link" th:href="@{/accidents}">Нарушения</a>
-                <a class="nav-item nav-link" th:href="@{/addAccident}">Добавить нарушение</a>
+                <a class="nav-item nav-link" th:href="@{/createAccident}">Добавить нарушение</a>
             </div>
         </div>
     </nav>
