--- a/src/main/resources/templates/accidents.html
+++ b/src/main/resources/templates/accidents.html
@@ -24,6 +24,7 @@
                 <a class="nav-item nav-link" th:href="@{index}">Главная</a>
                 <a class="nav-item nav-link active" th:href="@{/accidents}">Нарушения</a>
                 <a class="nav-item nav-link" th:href="@{/createAccident}">Добавить нарушение</a>
+                <a class="nav-item nav-link" th:href="@{/logout}">Выйти</a>
             </div>
         </div>
     </nav>
