--- a/src/main/resources/templates/createAccident.html
+++ b/src/main/resources/templates/createAccident.html
@@ -24,50 +24,51 @@
                 <a class="nav-item nav-link" href="#">Главная</a>
                 <a class="nav-item nav-link" th:href="@{/accidents}">Нарушения</a>
                 <a class="nav-item nav-link active" th:href="@{/createAccident}">Добавить нарушение</a>
+                <a class="nav-item nav-link" th:href="@{/logout}">Выйти</a>
             </div>
         </div>
-    </nav>
-    <div class="row pt-3">
-        <div class="card" style="width: 100%">
-            <div class="card-header">
-                Новое нарушение
-            </div>
-            <div class="card-body">
-                <form th:action="@{/saveAccident}" method="POST" enctype="multipart/form-data">
-                    <input type="hidden" name="id" th:value="0"/>
-                    <div class="form-group">
-                        <label for="name">Название нарушения</label>
-                        <input type="text" class="form-control" name="name" id="name">
-                    </div>
-                    <div class="form-group">
-                        <label for="type.id">Тип</label>
-                        <select class="form-control" id="type.id" name="type.id">
-                            <option th:each="type: ${types}"
-                                    th:text="${type.name}"
-                                    th:value="${type.id}"></option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="type.id" name="rIds">Статья</label>
-                        <select class="form-control" id="rIds" name="rIds" multiple>
-                            <option th:each="rule: ${rules}"
-                                    th:text="${rule.name}"
-                                    th:value="${rule.id}"></option>
-                        </select>
-                    </div>
-                    <div class="form-group">
-                        <label for="description">Описание нарушения</label>
-                        <input type="text" class="form-control" name="description" id="description">
-                    </div>
-                    <div class="form-group">
-                        <label for="address">Адрес нарушения</label>
-                        <input type="text" class="form-control" name="address" id="address">
-                    </div>
-                    <button type="submit" class="btn btn-primary mt-3">Сохранить</button>
-                </form>
-            </div>
+</nav>
+<div class="row pt-3">
+    <div class="card" style="width: 100%">
+        <div class="card-header">
+            Новое нарушение
+        </div>
+        <div class="card-body">
+            <form th:action="@{/saveAccident}" method="POST" enctype="multipart/form-data">
+                <input type="hidden" name="id" th:value="0"/>
+                <div class="form-group">
+                    <label for="name">Название нарушения</label>
+                    <input type="text" class="form-control" name="name" id="name">
+                </div>
+                <div class="form-group">
+                    <label for="type.id">Тип</label>
+                    <select class="form-control" id="type.id" name="type.id">
+                        <option th:each="type: ${types}"
+                                th:text="${type.name}"
+                                th:value="${type.id}"></option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="type.id" name="rIds">Статья</label>
+                    <select class="form-control" id="rIds" name="rIds" multiple>
+                        <option th:each="rule: ${rules}"
+                                th:text="${rule.name}"
+                                th:value="${rule.id}"></option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="description">Описание нарушения</label>
+                    <input type="text" class="form-control" name="description" id="description">
+                </div>
+                <div class="form-group">
+                    <label for="address">Адрес нарушения</label>
+                    <input type="text" class="form-control" name="address" id="address">
+                </div>
+                <button type="submit" class="btn btn-primary mt-3">Сохранить</button>
+            </form>
         </div>
     </div>
+</div>
 </div>
 </body>
 </html>
