--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -16,6 +16,9 @@
             </div>
             <hr class="my-4">
             <button type="submit" class="w-100 btn btn-lg btn-primary">Авторизация</button>
+            <a th:href="@{/reg}">
+                <button type="button">Регистрация</button>
+            </a>
         </form>
     </main>
 </div>
