--- a/src/main/resources/templates/reg.html
+++ b/src/main/resources/templates/reg.html
@@ -4,6 +4,9 @@
       Регистрация нового пользователя.
     </div>
     <div class="card-body">
+      <div th:if="${not #lists.isEmpty(errorMessage)}" class="alert alert-danger" role="alert">
+      <span th:text="${errorMessage}"></span>
+    </div>
       <form th:action="@{/reg}" method="POST">
         <div class="form-group">
           <label for="username">Имя</label>
